# guitar-sheet

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: feature-implementation-tests.mdc  full-stack-feature-completion.mdc
.github/workflows/: ci.yml
.husky/: pre-push
docs/: frontend-theme-and-components.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: conflict.rs  db.rs  error.rs  hash.rs  lib.rs  library_paths.rs  paths.rs  sanitize.rs  secrets.rs  settings.rs  state.rs  sync_github.rs  ui_prefs.rs
src-tauri/src/commands/: folders.rs  github_settings.rs  github_sync.rs  mod.rs  sheets.rs  tags.rs  ui_prefs.rs
src-tauri/src/github/: client.rs  mod.rs
src/chords/: chordDiagramLayout.ts  chordShapes.ts  convertAsciiChordSheet.test.ts  convertAsciiChordSheet.ts  normalizeChord.ts  parseChordSheet.test.ts  parseChordSheet.ts  readerPrefs.ts  sheetReaderState.test.ts  sheetReaderState.ts  simplifyChord.ts  textSheetEmbeds.test.ts  textSheetEmbeds.ts  transposeChord.test.ts  transposeChord.ts
src/components/: GsToastHost.vue  LibrarySheetTree.vue  ReaderChordSettingsPanel.vue  SheetReaderPanel.vue
src/composables/: useAutoScroll.ts  useMetronome.ts
src/practice/: constants.ts  practicePreferences.test.ts  practicePreferences.ts  scrollGeometry.test.ts  scrollGeometry.ts  scrollSpeed.test.ts  scrollSpeed.ts
src/router/: index.ts
src/styles/: dark-app.css  light-paper.css
src/types/: folder.ts  sheet.ts  uiPrefs.ts
(+24 files in other folders)
